pr-cli/deploy/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pr-cli-webhook
spec:
  template:
    spec:
      containers:
      - name: pr-cli
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
